[gd_scene load_steps=27 format=4 uid="uid://c764br4tplkb2"]

[ext_resource type="TileSet" uid="uid://07fq3rspk8ia" path="res://scenes/tileset.tres" id="1_wrx86"]
[ext_resource type="Resource" uid="uid://cmhcuoms2kh1a" path="res://scenes/quests/lore_quests/quest_001/2_ink_combat/components/dialogues/ink_well.dialogue" id="2_o41k0"]
[ext_resource type="Script" uid="uid://cp54mgi54nywo" path="res://scenes/game_logic/fill_game_logic.gd" id="3_0b2ty"]
[ext_resource type="PackedScene" uid="uid://2rbpl811wlv1" path="res://scenes/game_elements/props/background_music/background_music.tscn" id="3_nlryc"]
[ext_resource type="PackedScene" uid="uid://iu2q66clupc6" path="res://scenes/game_elements/characters/player/player.tscn" id="3_v7ikp"]
[ext_resource type="AudioStream" uid="uid://dgwihwibc8ah6" path="res://assets/first_party/music/Threadbare_Combat.ogg" id="4_hlahk"]
[ext_resource type="PackedScene" uid="uid://lgu7aeqa7o3r" path="res://scenes/game_elements/props/door/door.tscn" id="5_bxnsu"]
[ext_resource type="PackedScene" uid="uid://b82nsrh332syj" path="res://scenes/game_elements/characters/enemies/throwing_enemy/throwing_enemy.tscn" id="5_h0i4r"]
[ext_resource type="Script" uid="uid://hqdquinbimce" path="res://scenes/game_elements/props/teleporter/teleporter/components/teleporter.gd" id="5_lmnu5"]
[ext_resource type="PackedScene" uid="uid://crqjcicx0vdu" path="res://scenes/game_elements/props/decoration/bush/bush.tscn" id="5_nlryc"]
[ext_resource type="PackedScene" uid="uid://y8ha8abfyap2" path="res://scenes/game_elements/props/filling_barrel/filling_barrel.tscn" id="6_v7ikp"]
[ext_resource type="PackedScene" uid="uid://cfcgrfvtn04yp" path="res://scenes/ui_elements/hud/hud.tscn" id="9_na0be"]
[ext_resource type="SpriteFrames" uid="uid://dtoylirwywk0j" path="res://scenes/game_elements/characters/components/sprite_frames/storyweaver_blue.tres" id="10_hlahk"]
[ext_resource type="SpriteFrames" uid="uid://b3r84ksew5djp" path="res://scenes/game_elements/characters/enemies/throwing_enemy/components/ink_drinker_frames_purple.tres" id="12_h7w4n"]
[ext_resource type="AudioStream" uid="uid://qf2d38rabx8o" path="res://assets/third_party/sounds/characters/enemies/throwing_enemy/Wings.ogg" id="13_gn6oy"]
[ext_resource type="PackedScene" uid="uid://7873qa54birk" path="res://scenes/game_elements/props/tree/tree.tscn" id="13_hlahk"]
[ext_resource type="AudioStream" uid="uid://fcmjf1srys7n" path="res://assets/third_party/sounds/characters/enemies/throwing_enemy/Spit.ogg" id="14_7ekah"]
[ext_resource type="SpriteFrames" uid="uid://bhamin2pby7tq" path="res://scenes/game_elements/props/projectile/components/inkblob_spriteframes.tres" id="15_4xy6f"]
[ext_resource type="AudioStream" uid="uid://7jlv4wqpihl7" path="res://scenes/game_elements/props/projectile/components/blob_hit.wav" id="15_64i88"]
[ext_resource type="PackedScene" uid="uid://clgisducnnh0a" path="res://scenes/game_elements/fx/liquid_small_splat/liquid_small_splat.tscn" id="15_q60ju"]
[ext_resource type="PackedScene" uid="uid://b4qu6wml5gd7a" path="res://scenes/game_elements/fx/liquid_big_splat/liquid_big_splat.tscn" id="16_vkiqy"]
[ext_resource type="PackedScene" uid="uid://bgce3qns72g3m" path="res://scenes/game_elements/fx/liquid_trail.tscn" id="17_tqepj"]
[ext_resource type="PackedScene" uid="uid://dkx3dgc1br3b4" path="res://scenes/ui_elements/input_hints/repel_hint.tscn" id="22_8me22"]

[sub_resource type="Animation" id="Animation_nlryc"]
resource_name = "goal_completed"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../OnTheGround/LevelExit/Door Exit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"open"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hlahk"]
_data = {
&"goal_completed": SubResource("Animation_nlryc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmnu5"]
size = Vector2(101, 49)

[node name="InkCombat" type="Node2D"]
y_sort_enabled = true

[node name="BackgroundMusic" parent="." instance=ExtResource("3_nlryc")]
stream = ExtResource("4_hlahk")

[node name="FillGameLogic" type="Node" parent="."]
script = ExtResource("3_0b2ty")
intro_dialogue = ExtResource("2_o41k0")
metadata/_custom_type_script = "uid://cp54mgi54nywo"

[node name="LevelCompletedAnimation" type="AnimationPlayer" parent="FillGameLogic"]
libraries = {
&"": SubResource("AnimationLibrary_hlahk")
}

[node name="TileMapLayers" type="Node2D" parent="."]

[node name="Water" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAAFAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAADAAAAAAAAAAAAAAACAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAgAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAACAAkAAAAAAAAAAAACAAgAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAgAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAgAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAEAAAAAAAAAAAA=")
tile_set = ExtResource("1_wrx86")

[node name="Foam" type="TileMapLayer" parent="TileMapLayers"]
tile_set = ExtResource("1_wrx86")

[node name="Grass" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAANAAcAAQABAAEAAAANAAYAAQABAAEAAAANAAUAAQABAAEAAAANAAQAAQABAAEAAAANAAMAAQABAAEAAAANAAIAAQABAAEAAAANAAEAAQABAAEAAAAMAAcAAQABAAEAAAAMAAYAAQABAAEAAAAMAAUAAQABAAEAAAAMAAQAAQABAAEAAAAMAAMAAQABAAEAAAAMAAIAAQABAAEAAAAMAAEAAQABAAEAAAALAAcAAQABAAEAAAALAAYAAQABAAEAAAALAAUAAQABAAEAAAALAAQAAQABAAEAAAALAAMAAQABAAEAAAALAAIAAQABAAEAAAALAAEAAQABAAEAAAAKAAcAAQABAAEAAAAKAAYAAQABAAEAAAAKAAUAAQABAAEAAAAKAAQAAQABAAEAAAAKAAMAAQABAAEAAAAKAAIAAQABAAEAAAAKAAEAAQABAAEAAAAJAAcAAQABAAEAAAAJAAYAAQABAAEAAAAJAAUAAQABAAEAAAAJAAQAAQABAAEAAAAJAAMAAQABAAEAAAAJAAIAAQABAAEAAAAJAAEAAQABAAEAAAAIAAcAAQABAAEAAAAIAAYAAQABAAEAAAAIAAUAAQABAAEAAAAIAAQAAQABAAEAAAAIAAMAAQABAAEAAAAIAAIAAQABAAEAAAAIAAEAAQABAAEAAAAHAAcAAQABAAEAAAAHAAYAAQABAAEAAAAHAAUAAQABAAEAAAAHAAQAAQABAAEAAAAHAAMAAQABAAEAAAAHAAIAAQABAAEAAAAHAAEAAQABAAEAAAAGAAcAAQABAAEAAAAGAAYAAQABAAEAAAAGAAUAAQABAAEAAAAGAAQAAQABAAEAAAAGAAMAAQABAAEAAAAGAAIAAQABAAEAAAAFAAcAAQABAAEAAAAFAAYAAQABAAEAAAAFAAUAAQABAAEAAAAFAAQAAQABAAEAAAAFAAMAAQABAAEAAAAFAAIAAQABAAEAAAAFAAEAAQABAAEAAAAEAAcAAQABAAEAAAAEAAYAAQABAAEAAAAEAAUAAQABAAEAAAAEAAQAAQABAAEAAAAEAAMAAQABAAEAAAAEAAIAAQABAAEAAAAEAAEAAQABAAEAAAADAAcAAQABAAEAAAADAAYAAQABAAEAAAADAAUAAQABAAEAAAADAAQAAQABAAEAAAADAAMAAQABAAEAAAADAAIAAQABAAEAAAADAAEAAQABAAEAAAACAAcAAQABAAEAAAACAAYAAQABAAEAAAACAAUAAQABAAEAAAACAAMAAQABAAEAAAACAAIAAQABAAEAAAACAAEAAQABAAEAAAABAAcAAQABAAEAAAABAAYAAQABAAEAAAABAAUAAQABAAEAAAABAAMAAQABAAEAAAABAAIAAQABAAEAAAABAAEAAQABAAEAAAACAAQAAQABAAEAAAABAAQAAQABAAEAAAAAAAQAAQABAAEAAAAAAAUAAQABAAEAAAAAAAYAAQABAAEAAAAAAAcAAQABAAEAAAAGAAAAAQABAAEAAAAGAAEAAQABAAEAAAAHAAAAAQABAAEAAAAFAAAAAQABAAEAAAAIAAAAAQABAAEAAAAJAAAAAQABAAEAAAALAAAAAQABAAEAAAAMAAAAAQABAAEAAAAKAAAAAQABAAEAAAANAAAAAQABAAEAAAAEAAAAAQABAAEAAAADAAAAAQABAAEAAAACAAAAAQABAAEAAAABAAAAAQABAAEAAAAAAAAAAQABAAEAAAAAAAEAAQABAAEAAAAAAAIAAQABAAEAAAAAAAMAAQABAAEAAAAAAAgAAQABAAEAAAABAAgAAQABAAEAAAACAAgAAQABAAEAAAADAAgAAQABAAEAAAAEAAgAAQABAAEAAAAFAAgAAQABAAEAAAAGAAgAAQABAAEAAAAHAAgAAQABAAEAAAAIAAgAAQABAAEAAAAJAAgAAQABAAEAAAAKAAgAAQABAAEAAAAMAAgAAQABAAEAAAALAAgAAQABAAEAAAANAAgAAQABAAEAAAAOAAgAAQABAAEAAAAOAAcAAQABAAEAAAAOAAYAAQABAAEAAAAOAAUAAQABAAEAAAAOAAQAAQABAAEAAAAOAAMAAQABAAEAAAAOAAIAAQABAAEAAAAOAAEAAQABAAEAAAAOAAAAAQABAAEAAAA=")
tile_set = ExtResource("1_wrx86")

[node name="Grass Patches" type="TileMapLayer" parent="TileMapLayers"]
tile_set = ExtResource("1_wrx86")

[node name="Paths" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAAAAAgAAQAIAAEAAAAAAAcAAQAIAAEAAAAAAAYAAQAIAAEAAAAAAAUAAQAIAAEAAAAAAAQAAQAFAAAAAAABAAQAAQAGAAMAAAACAAQAAQAHAAMAAAAGAAAAAQAIAAEAAAAGAAEAAQAIAAIAAAAGAP//AQAIAAAAAAA=")
tile_set = ExtResource("1_wrx86")

[node name="Stones" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAACAAgABAABAAMAAAADAAgABAABAAMAAAAEAAgABAABAAUAAAAFAAgABAABAAMAAAAGAAkABAABAAMAAAAHAAkABAABAAMAAAAIAAkABAABAAUAAAAJAAkABAABAAUAAAAKAAkABAABAAMAAAALAAkABAABAAMAAAAMAAkABAACAAMAAAANAAkABAABAAUAAAAOAAkABAABAAMAAAACAAcABAABAAQAAAADAAcABAABAAQAAAAEAAcABAABAAAAAAAFAAcABAABAAQAAAAGAAgABAAAAAIAAAAHAAgABAABAAQAAAAIAAgABAABAAQAAAAJAAgABAABAAQAAAAKAAgABAABAAQAAAALAAgABAABAAQAAAAMAAgABAABAAQAAAANAAgABAABAAEAAAAOAAgABAABAAIAAAAPAAcABAACAAEAAAAPAAgABAACAAIAAAAPAAkABAACAAMAAAACAAUABAACAAQAAAACAAYABAACAAEAAAABAAMABAABAAMAAAACAAMABAACAAMAAAACAAIABAACAAIAAAABAAIABAABAAEAAAAAAAMABAABAAUAAAAAAAIABAABAAEAAAAAAAEABAABAAEAAAABAAEABAABAAAAAAACAAEABAABAAMAAAACAAAABAABAAQAAAABAAAABAABAAIAAAAAAAAABAABAAEAAAADAAAABAABAAIAAAAFAAAABAACAAIAAAAEAAAABAABAAEAAAABAAUABAAAAAAAAAABAAYABAAAAAEAAAABAAcABAAAAAIAAAD//wMABAAAAAEAAAD//wQABAADAAEAAAD//wUABAADAAEAAAD//wYABAADAAEAAAD//wcABAADAAIAAAD//wAABAAAAAAAAAD//wEABAAAAAEAAAD//wIABAAAAAEAAAD//wgABAABAAMAAAABAAgABAABAAMAAAAEAAEABAABAAMAAAAFAAEABAACAAMAAAADAAEABAABAAUAAAANAAcABAAAAAEAAAAOAAcABAABAAEAAAANAAYABAAAAAAAAAAOAAYABAABAAIAAAAPAAYABAABAAEAAAAPAAUABAACAAEAAAAOAAUABAAAAAEAAAAOAAMABAABAAEAAAAOAAIABAABAAEAAAANAAEABAAAAAEAAAANAAAABAABAAAAAAAOAAAABAABAAAAAAAPAAAABAACAAAAAAAPAAEABAABAAAAAAAPAAIABAACAAEAAAAOAAEABAABAAEAAAAOAAQABAAAAAEAAAAPAAQABAABAAEAAAAPAAMABAACAAEAAAAMAAAABAABAAAAAAALAAAABAABAAAAAAAKAAAABAABAAAAAAAJAAAABAABAAAAAAAIAAAABAABAAAAAAAHAAAABAAAAAEAAAANAAIABAABAAIAAAANAAMABAAAAAMAAAAHAAEABAAAAAMAAAAIAAEABAABAAUAAAAKAAEABAABAAUAAAALAAEABAABAAUAAAAJAAEABAABAAMAAAAMAAEABAABAAMAAAAGAAcABAACAAQAAAA=")
tile_set = ExtResource("1_wrx86")

[node name="Grass Level 2" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAAAAAIAAQABAAIAAAABAAIAAQABAAIAAAACAAIAAQACAAIAAAACAAEAAQACAAEAAAADAAAAAQABAAIAAAAEAAAAAQABAAIAAAAFAAAAAQACAAIAAAADAP//AQABAAAAAAAEAP//AQABAAAAAAAFAP//AQACAAAAAAD//wcAAQACAAIAAAD//wYAAQACAAEAAAD//wUAAQACAAEAAAD//wQAAQACAAEAAAD//wMAAQACAAEAAAD+/wcAAQAAAAIAAAD+/wYAAQAAAAEAAAD+/wUAAQAAAAEAAAD+/wQAAQAAAAEAAAD+/wMAAQAAAAEAAAD//wIAAQABAAEAAAD+/wIAAQAAAAEAAAD+/wEAAQAAAAEAAAD//wEAAQABAAEAAAAAAAEAAQABAAEAAAABAAEAAQABAAEAAAACAAAAAQABAAEAAAABAAAAAQABAAEAAAAAAAAAAQABAAEAAAD//wAAAQABAAEAAAD+/wAAAQAAAAEAAAACAP//AQABAAAAAAABAP//AQABAAAAAAAAAP//AQABAAAAAAD/////AQABAAAAAAD+////AQAAAAAAAAAHAAAAAQAAAAIAAAAIAAAAAQACAAIAAAAHAP//AQAAAAAAAAAIAP//AQACAAAAAAAKAAAAAQADAAMAAAAKAP//AQADAAMAAAA=")
tile_set = ExtResource("1_wrx86")

[node name="Stone Level 2" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAD//wAABAABAAEAAAD//wEABAADAAEAAAAAAAAABAABAAQAAAABAAAABAACAAQAAAD//wIABAADAAUAAAAAAAEABAABAAUAAAABAAEABAACAAUAAAACAAAABAACAAMAAAA=")
tile_set = ExtResource("1_wrx86")

[node name="Grass Level 3" type="TileMapLayer" parent="TileMapLayers"]
tile_map_data = PackedByteArray("AAD//wEAAQACAAIAAAD//wAAAQABAAEAAAAAAAAAAQABAAIAAAABAAAAAQACAAIAAAABAP//AQACAAAAAAAAAP//AQABAAAAAAD/////AQABAAAAAAD+////AQAAAAAAAAD+/wAAAQAAAAEAAAD+/wEAAQAAAAIAAAA=")
tile_set = ExtResource("1_wrx86")

[node name="OnTheGround" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Bush" parent="OnTheGround" instance=ExtResource("5_nlryc")]
position = Vector2(159, 88)

[node name="Bush2" parent="OnTheGround" instance=ExtResource("5_nlryc")]
position = Vector2(150, 114)
scale = Vector2(0.8, 0.8)

[node name="Bush4" parent="OnTheGround" instance=ExtResource("5_nlryc")]
position = Vector2(52, 36)
scale = Vector2(0.8, 0.8)

[node name="Bush3" parent="OnTheGround" instance=ExtResource("5_nlryc")]
position = Vector2(171, 146)
scale = Vector2(0.65, 0.65)

[node name="Bush5" parent="OnTheGround" instance=ExtResource("5_nlryc")]
position = Vector2(662, 47)
scale = Vector2(0.45, 0.45)

[node name="LevelExit" type="Node2D" parent="OnTheGround"]
y_sort_enabled = true
position = Vector2(416, 0)

[node name="Door Exit" parent="OnTheGround/LevelExit" instance=ExtResource("5_bxnsu")]
position = Vector2(0, 72)
play_victory_fanfare_on_open = true

[node name="Teleporter" type="Area2D" parent="OnTheGround/LevelExit"]
position = Vector2(0, -25)
collision_layer = 4
script = ExtResource("5_lmnu5")
next_scene = "uid://cgemeabsewy1f"
enter_transition = 4
exit_transition = 5
metadata/_custom_type_script = "uid://hqdquinbimce"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnTheGround/LevelExit/Teleporter"]
position = Vector2(-1.5, -9.5)
shape = SubResource("RectangleShape2D_lmnu5")

[node name="Player" parent="OnTheGround" instance=ExtResource("3_v7ikp")]
position = Vector2(28, 487)
player_name = "StoryWeaver"
sprite_frames = ExtResource("10_hlahk")

[node name="Door Enter" parent="OnTheGround" instance=ExtResource("5_bxnsu")]
position = Vector2(32, 574)

[node name="ThrowingEnemy" parent="OnTheGround" instance=ExtResource("5_h0i4r")]
position = Vector2(857, 300)
sprite_frames = ExtResource("12_h7w4n")
idle_sound_stream = ExtResource("13_gn6oy")
attack_sound_stream = ExtResource("14_7ekah")
projectile_sprite_frames = ExtResource("15_4xy6f")
projectile_hit_sound_stream = ExtResource("15_64i88")
projectile_small_fx_scene = ExtResource("15_q60ju")
projectile_big_fx_scene = ExtResource("16_vkiqy")
projectile_trail_fx_scene = ExtResource("17_tqepj")

[node name="FillingBarrel" parent="OnTheGround" instance=ExtResource("6_v7ikp")]
position = Vector2(528, 164)
label = "Cyan"
color = Color(0, 1, 1, 1)

[node name="FillingBarrel2" parent="OnTheGround" instance=ExtResource("6_v7ikp")]
position = Vector2(748, 164)
label = "Cyan"
color = Color(0, 1, 1, 1)

[node name="FillingBarrel3" parent="OnTheGround" instance=ExtResource("6_v7ikp")]
position = Vector2(751, 497)
label = "Cyan"
color = Color(0, 1, 1, 1)

[node name="FillingBarrel4" parent="OnTheGround" instance=ExtResource("6_v7ikp")]
position = Vector2(640, 497)
label = "Cyan"
color = Color(0, 1, 1, 1)

[node name="FillingBarrel6" parent="OnTheGround" instance=ExtResource("6_v7ikp")]
position = Vector2(527, 497)
label = "Cyan"
color = Color(0, 1, 1, 1)

[node name="FillingBarrel5" parent="OnTheGround" instance=ExtResource("6_v7ikp")]
position = Vector2(641, 164)
label = "Cyan"
color = Color(0, 1, 1, 1)

[node name="Tree" parent="OnTheGround" instance=ExtResource("13_hlahk")]
position = Vector2(33, 39)
scale = Vector2(1.00063, 0.911434)

[node name="Tree2" parent="OnTheGround" instance=ExtResource("13_hlahk")]
position = Vector2(674, 32)
scale = Vector2(0.95, 0.95)

[node name="ScreenOverlay" type="CanvasLayer" parent="."]

[node name="InputHints" type="HBoxContainer" parent="ScreenOverlay"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_right = 157.0
grow_vertical = 0

[node name="RepelHint" parent="ScreenOverlay/InputHints" instance=ExtResource("22_8me22")]
layout_mode = 2

[node name="HUD" parent="." instance=ExtResource("9_na0be")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.333, 1.333)
limit_left = 0
limit_top = 0
limit_right = 2048
limit_bottom = 2048
position_smoothing_enabled = true
editor_draw_limits = true

[connection signal="goal_reached" from="FillGameLogic" to="FillGameLogic/LevelCompletedAnimation" method="play" binds= ["goal_completed"]]
